--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     }
   ],
   "require": {
+    "php": ">=5.6.0",
     "yiisoft/yii2": "^2.0"
   },
   "autoload": {
@@ -22,5 +23,9 @@
       "type": "composer",
       "url": "https://asset-packagist.org"
     }
-  ]
+  ],
+  "require-dev": {
+    "carono/yii2-giix": "*",
+    "yiisoft/yii2-gii": "*"
+  }
 }
