--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,8 @@ install:
 
 before_script:
   - mysql -e 'create database test;'
+  - psql -c 'create database test' -U postgres
   - ~/.composer/vendor/bin/codecept build
 
 script:
-  - ~/.composer/vendor/bin/codecept run --env mysql
+  - ~/.composer/vendor/bin/codecept run --env mysql,pgsql
