--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
   },
   "autoload": {
     "psr-4": {
-      "carono\\yii2migrate\\": "src",
-      "carono\\yii2migrate\\exceptions\\": "exceptions"
+      "carono\\yii2migrate\\": "src"
     }
   },
   "repositories": [
