--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,8 @@ before_script:
 - mysql -e 'create database test;'
 - psql -c 'create database test' -U postgres
 - ~/.composer/vendor/bin/codecept build
-- php tests/app/yii migrate --interactive=0
+- php tests/app/yii migrate --interactive=0 --db=db
+- php tests/app/yii migrate --interactive=0 --db=db2
 
 script:
 - ~/.composer/vendor/bin/codecept run --env mysql,pgsql
