--- a/.travis.yml
+++ b/.travis.yml
@@ -44,17 +44,13 @@ before_script:
 - ~/.composer/vendor/bin/codecept build
 - php tests/app/yii migrate --interactive=0 --db=db
 - php tests/app/yii migrate --interactive=0 --db=db2
-- |
-  if [ $TASK_TESTS_COVERAGE == 1 ]; then
-    PHPUNIT_FLAGS="--coverage-clover=coverage.clover"
-  fi
 
 script:
-- ~/.composer/vendor/bin/codecept run --env mysql,pgsql
+- ~/.composer/vendor/bin/codecept run --env mysql,pgsql --coverage --xml
 
 after_script:
 - |
   if [ $TASK_TESTS_COVERAGE == 1 ]; then
     travis_retry wget https://scrutinizer-ci.com/ocular.phar
-    php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+    php ocular.phar code-coverage:upload --format=php-clover tests/output/coverage.xml
   fi
